<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProsesActivity"
    android:background="#088ECA">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/image"
        android:contentDescription="@string/todo" />

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:id="@+id/relativeLayout"
        android:layout_centerVertical="true"
        tools:ignore="UnknownId">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/silahkan_masukan_laporan_stok_barang"
            android:id="@+id/txt1"
            android:textColor="#FFFFFF"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt1"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal"
            android:id="@id/relativeLayout">

            <EditText
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:id="@+id/edit1"
                android:layout_alignParentStart="true"
                android:hint="@string/bulan_1"
                android:elevation="4dp"
                android:background="@drawable/radius"
                android:textColor="#088ECA"
                android:textAlignment="center"
                android:textColorHint="#088ECA"
                android:inputType="number"
                android:autofillHints="" />
            <EditText
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:id="@+id/edit2"
                android:hint="@string/bulan_2"
                android:elevation="4dp"
                android:textColorHint="#088ECA"
                android:inputType="number"
                android:textAlignment="center"
                android:background="@drawable/radius"
                android:textColor="#088ECA"
                android:layout_centerInParent="true"
                android:autofillHints="" />
            <EditText
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:textAlignment="center"
                android:id="@+id/edit3"
                android:hint="@string/bulan_3"
                android:background="@drawable/radius"
                android:textColor="#088ECA"
                android:textColorHint="#088ECA"
                android:elevation="4dp"
                android:inputType="number"
                android:layout_alignParentEnd="true"
                android:autofillHints="" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayout"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal"
            android:id="@+id/relativeLayout2"
           >

            <EditText
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:id="@+id/edit4"
                android:layout_alignParentStart="true"
                android:hint="@string/bulan_4"
                android:elevation="4dp"
                android:background="@drawable/radius"
                android:textColor="#088ECA"
                android:textAlignment="center"
                android:textColorHint="#088ECA"
                android:inputType="number"
                android:autofillHints="" />
            <EditText
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:id="@+id/edit5"
                android:hint="@string/bulan_5"
                android:elevation="4dp"
                android:textColorHint="#088ECA"
                android:inputType="number"
                android:textAlignment="center"
                android:background="@drawable/radius"
                android:textColor="#088ECA"
                android:layout_centerInParent="true"
                android:autofillHints="" />
            <EditText
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:textAlignment="center"
                android:id="@+id/edit6"
                android:hint="@string/bulan_6"
                android:background="@drawable/radius"
                android:textColor="#088ECA"
                android:textColorHint="#088ECA"
                android:elevation="4dp"
                android:inputType="number"
                android:layout_alignParentEnd="true"
                android:autofillHints="" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayout2"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal"
            android:id="@+id/relativeLayout3"
            >

            <EditText
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:id="@+id/edit7"
                android:layout_alignParentStart="true"
                android:hint="@string/bulan_7"
                android:elevation="4dp"
                android:background="@drawable/radius"
                android:textColor="#088ECA"
                android:textAlignment="center"
                android:textColorHint="#088ECA"
                android:inputType="number"
                android:autofillHints="" />
            <EditText
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:id="@+id/edit8"
                android:hint="@string/bulan_8"
                android:elevation="4dp"
                android:textColorHint="#088ECA"
                android:inputType="number"
                android:textAlignment="center"
                android:background="@drawable/radius"
                android:textColor="#088ECA"
                android:layout_centerInParent="true"
                android:autofillHints="" />
            <EditText
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:textAlignment="center"
                android:id="@+id/edit9"
                android:hint="@string/bulan_9"
                android:background="@drawable/radius"
                android:textColor="#088ECA"
                android:textColorHint="#088ECA"
                android:elevation="4dp"
                android:inputType="number"
                android:layout_alignParentEnd="true"
                android:autofillHints="" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayout3"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal"
            android:id="@+id/relativeLayout4"
            >

            <EditText
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:id="@+id/edit10"
                android:layout_alignParentStart="true"
                android:hint="@string/bulan_10"
                android:elevation="4dp"
                android:background="@drawable/radius"
                android:textColor="#088ECA"
                android:textAlignment="center"
                android:textColorHint="#088ECA"
                android:inputType="number"
                android:autofillHints="" />
            <EditText
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:id="@+id/edit11"
                android:hint="@string/bulan_11"
                android:elevation="4dp"
                android:textColorHint="#088ECA"
                android:inputType="number"
                android:textAlignment="center"
                android:background="@drawable/radius"
                android:textColor="#088ECA"
                android:layout_centerInParent="true"
                android:autofillHints="" />
            <EditText
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:textAlignment="center"
                android:id="@+id/edit12"
                android:hint="@string/bulan_12"
                android:background="@drawable/radius"
                android:textColor="#088ECA"
                android:textColorHint="#088ECA"
                android:elevation="4dp"
                android:inputType="number"
                android:layout_alignParentEnd="true"
                android:autofillHints="" />
        </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catatan_banyak_data_berdasarkan_laporan_data_beberapa_bulan_terakhir"
            android:id="@+id/txt4"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/relativeLayout"
            android:textStyle="bold"
            android:textSize="10sp"
           android:layout_centerHorizontal="true"
            tools:ignore="SmallSp" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/proses"
            android:text="@string/proses"
            android:background="@drawable/radius"
            android:textColor="#088ECA"
            android:elevation="4dp"
            android:layout_below="@id/txt4"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>



