<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="#088ECA">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/image"
        android:contentDescription="@string/todo" />

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:id="@+id/relativeLayout"
        android:layout_centerVertical="true"
        tools:ignore="UnknownId">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ramalan_stok_barang_untuk_bulan_berikutnya_adalah"
            android:id="@+id/txt1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            />
        <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:elevation="4dp"
            android:textSize="14sp"
            android:layout_centerHorizontal="true"
            android:id="@+id/namabarang"
            android:background="@drawable/radius"
            android:layout_below="@+id/txt1"
            android:autofillHints=""
            tools:ignore="LabelFor" />
        <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:elevation="4dp"
            android:textSize="14sp"
            android:layout_centerHorizontal="true"
            android:id="@+id/hasil"
            android:background="@drawable/radius"
            android:layout_below="@+id/namabarang"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal"
        android:id="@+id/relativeLayout2"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn1"
            android:layout_alignParentStart="true"
            android:text="@string/ulang"
            android:elevation="4dp"
            android:background="@drawable/radius"
            android:textColor="#088ECA"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn2"
            android:text="@string/keluar"
            android:background="@drawable/radius"
            android:textColor="#088ECA"
            android:layout_alignParentEnd="true"
            android:elevation="4dp"

            tools:ignore="RelativeOverlap" />
    </RelativeLayout>



</RelativeLayout>